Remove unused config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,7 @@
 {
   "recommendations": [
     "EditorConfig.EditorConfig",
-    "esbenp.prettier-vscode",
     "streetsidesoftware.code-spell-checker",
-    "foxundermoon.shell-format",
-    "ms-azuretools.vscode-docker"
+    "foxundermoon.shell-format"
   ]
 }
