--- a/examples/nginx-app/docker-compose.yml
+++ b/examples/nginx-app/docker-compose.yml
@@ -2,16 +2,17 @@ version: '3.8'
 
 services:
   app:
-    image: docker-registry.example.com/badsyntax/nginx-app:latest
+    image: registry.docker-box.example.com/badsyntax/nginx-app:latest
     networks:
       - traefik-public
     healthcheck:
-      test: curl --fail http://localhost:80 || exit 1
+      test:
+        ['CMD', 'wget', '-q', '--tries=1', '--spider', 'http://localhost:80']
     deploy:
       mode: replicated
       replicas: 2
       labels:
-        - 'traefik.docker.network=traefik-public'
+        - 'traefik.docker.lbswarm=true'
         - 'traefik.http.middlewares.nginx-app-redirectscheme.redirectscheme.permanent=true'
         - 'traefik.http.middlewares.nginx-app-redirectscheme.redirectscheme.scheme=https'
         - 'traefik.http.routers.nginx-app-secure.entrypoints=websecure'
